Archive/e8687d6e7ee8fdc8bdd88f6dbcf6d7a8-a9835205769908f50c2a8f3d7daae65c/output
+ mv main.cpp main.c
+ clang main.c -std=c89 -pedantic-errors
main.c:1:6: error: parameter 'O' was not declared, defaulting to type 'int' [-Werror,-Wpedantic]
main(O){10<putchar(4^--O?77-(15&5128>>4*O):10)&&main(2+O);}
     ^
main.c:1:1: warning: only one parameter on 'main' declaration [-Wmain]
main(O){10<putchar(4^--O?77-(15&5128>>4*O):10)&&main(2+O);}
^
main.c:1:60: error: no newline at end of file [-Werror,-Wnewline-eof]
main(O){10<putchar(4^--O?77-(15&5128>>4*O):10)&&main(2+O);}
                                                           ^
1 warning and 2 errors generated.
